--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "10.4.5",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "framer-motion": "^6.5.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
